@@ -777,7 +777,7 @@ cpu.c:123:HABC1234I This is a message
 #define HHC01446 "Config file[%d] '%s': '%s' is not a valid '%s', assumed '%s'"
 #define HHC01447 "Default allowed AUTOMOUNT directory: '%s'"
 #define HHC01448 "Config file[%d] '%s': missing device number or device type"
-#define HHC01449 "Config file '%s': NUMCPU %d must not exceed MAXCPU %d"
+#define HHC01449 "Config file '%s': NUMCPU %d exceeds MAXCPU %d; MAXCPU set to NUMCPU"
 
 /* config.c */
 #define HHC01460 "%1d:%04X error in function '%s': '%s'"
