@@ -1,3 +1,5 @@
+03 Jun 2010 MAXCPU is reset to NUMCPU if NUMCPU exceeds MAXCPU; Warning message issued.
+03 Jun 2010 QQUIT added for cmdlevels above SYSOPER. (Quick QUIT)
 26 May 2010 QUERY command and enhancements. See QUERY HELP for assistance
 25 May 2010 Add EXCP counts to all devices
 20 May 2010 QUIT and SSD require 2nd command within 60 seconds.
